# Cache

./: CMakeLists.txt  README.md  bash_cmd  generator.py  test_log.txt
include/: CMakeLists.txt  LFU.cpp  LFU.hpp  LRU.cpp  LRU.hpp  cache_funcs.cpp  cache_funcs.hpp  comparators.hpp  hash_funcs.cpp  tester.cpp  tester.hpp
logs/: test_log.txt  valgrind_log.txt
src/: main.cpp
tests/: data0.txt  data1.txt  data10.txt  data2.txt  data3.txt  data4.txt  data5.txt  data6.txt  data7.txt  data8.txt  data9.txt  page_list.txt
